Index: Novo paragrafo

--- a/Aplicacao_Interativa/Views/Home/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Bem Vindo!</h1>
     <p>Conheça nosso site de reservas para barbearias.</p>
+    <p>Temos diversos serviços.</p>
 </div>
