--- a/Aplicacao_Interativa/Views/Home/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     
     @if (TempData["MensagemErro"] != null)
     {
-            <div class="alert alert-success" role="alert">
+            <div class="alert alert-danger" role="alert">
             @TempData["MensagemErro"]
             </div>  
     }
