--- a/Aplicacao_Interativa/Views/Login/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Login/Index.cshtml
@@ -1,31 +1,38 @@
-﻿@{
-    ViewData["Title"] = "Login";
+﻿@model LoginModel
+@{
+	Layout = "_LayoutDeslogado";
+	ViewData["Title"] = "Login";
 }
 
-<h1 class="display-4 text-center">Login</h1>
+@if (TempData["MensagemSucesso"] != null)
+{
+            <div class="alert alert-success" role="alert">
+        @TempData["MensagemSucesso"]
+            </div>  
+}
 
-<form>
+@if (TempData["MensagemErro"] != null)
+{
+                    <div class="alert alert-danger" role="alert">
+        @TempData["MensagemErro"]
+                    </div>  
+}
+
+<h1 class="text-center">Acesse o seu perfil</h1>
+<form asp-controller="Login" asp-action="Entrar" method="post">
   <div class="mb-3">
     <label for="email">E-mail</label>
-    <input type="email" class="form-control" placeholder="Digite seu e-mail"/>   
-  </div>
-  <div class="mb-3">
-    <label for="nome">Nome</label>
-    <input type="text" class="form-control" placeholder="Digite seu nome completo"/>
-  </div>
-  <div class="mb-3">
-    <label for="celualr">Celular</label>
-    <input type="text" class="form-control" placeholder="Digite seu celular"/>
+    <input type="email" asp-for="Email" required class="form-control" placeholder="Digite seu e-mail"/>   
   </div>
   <div class="mb-3">
     <label for="senha">Senha</label>
-     <input type="password" class="form-control" placeholder="Digite sua senha"/>
+     <input type="password" asp-for="Senha" required class="form-control" placeholder="Digite sua senha"/>
   </div>
 
-  <button type="submit" class="btn btn-primary">Entrar</button>
+  <button type="submit" class="btn btn-primary btn-block w-100 my-1">Entrar</button>
+    
 </form>
 
-
-
-
-
+<div>
+    <p>Não tem um login? <a asp-controller="Cadastro" asp-action="Criar">faça seu cadastro</a></p>
+</div>
