Implementação de Sessão do Usuário

--- a/Aplicacao_Interativa/Views/Login/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Login/Index.cshtml
@@ -34,5 +34,5 @@
 </form>
 
 <div>
-    <p>Não tem um login? <a asp-controller="Cadastro" asp-action="Criar">faça seu cadastro</a></p>
+    <p>Não tem um login? <a asp-controller="Cadastro" asp-action="Criar">Faça seu cadastro</a></p>
 </div>
