--- a/Aplicacao_Interativa/Views/Cadastro/Criar.cshtml
+++ b/Aplicacao_Interativa/Views/Cadastro/Criar.cshtml
@@ -1,4 +1,5 @@
-﻿@model UsuarioModel
+﻿@using Aplicacao_Interativa.Enums
+@model UsuarioModel
 @{
     ViewData["Title"] = "Cadastro";
 }
@@ -17,6 +18,14 @@
   <div class="mb-3">
     <label for="celualr">Celular</label>
     <input type="text" asp-for="Celular" required class="form-control" placeholder="Digite seu celular"/>
+  </div>
+  <div class="mb-3">
+    <label for="perfil">Perfil</label>
+    <select class="form-select" asp-for="Perfil">
+        <option value="0">Selecione</option>
+        <option value="@PerfilEnum.Barbeiro">Barbeiro</option>
+        <option value="@PerfilEnum.Cliente">Cliente</option>
+    </select>
   </div>
   <div class="mb-3">
     <label for="senha">Senha</label>
