--- a/Aplicacao_Interativa/Views/Shared/Components/Menu/Default.cshtml
+++ b/Aplicacao_Interativa/Views/Shared/Components/Menu/Default.cshtml
@@ -9,6 +9,12 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Página Incial</a>
         </li>
+        @if (Model.Perfil == Aplicacao_Interativa.Enums.PerfilEnum.Barbeiro)
+        {
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" asp-controller="Cadastro" asp-action="Criar">Cadastrar</a>
+            </li>        
+        }
         <li class="nav-item">
           <a class="nav-link active" asp-controller="Login" asp-action="Sair">Sair</a>
         </li>
