Funcionalidade de Redefinir Senha

--- a/Aplicacao_Interativa/Views/Login/Index.cshtml
+++ b/Aplicacao_Interativa/Views/Login/Index.cshtml
@@ -37,7 +37,7 @@
     <div>
         <p class="mb-4 text-sm">
              Esqueceu a senha? 
-             <a asp-controller="Cadastro" asp-action="Criar" class="linkcadastro text-primary text-gradient font-weight-bold">Redefinir Senha</a>
+             <a asp-controller="Login" asp-action="EsqueciSenha" class="linkcadastro text-primary text-gradient font-weight-bold">Redefinir Senha</a>
         </p>
     </div>
     <div>
