--- a/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AgendamentoModel
 @{
-    ViewData["Title"] = "Página Inicial";
+    ViewData["Title"] = "Agendamento";
 }
 <h1 class="text-center">Realizar Novo Atendimento</h1>
 <form asp-controller="Cliente" asp-action="Agendar" method="post">
@@ -21,12 +21,18 @@
                         }
                 </select>
             </div>          
-            <div class="form-group">
-                <label for="servico">Serviço</label>
-                <input type="text" required asp-for="Servico" class="form-control" name="Servico">
+            <div class="mt-3">
+                <label for="servicoId">Serviço</label>
+                <select asp-for="ServicoId" class="form-select">
+                    @foreach (var servico in ViewBag.Servicos)
+                    {
+                        <option value="@servico.Id">@servico.Nome</option>
+                    }
+                </select>
             </div>
             <div class="text-center">
                 <button onclick="enviarData()" class="btn btn-primary mt-3 w-100">Enviar</button>
+                <a class="btn btn-secondary btn-block w-100 my-1" role="button" asp-controller="Cliente" asp-action="Index">Voltar</a>
             </div>
         </div>
     </div>
