--- a/Aplicacao_Interativa/Views/Cadastro/Criar.cshtml
+++ b/Aplicacao_Interativa/Views/Cadastro/Criar.cshtml
@@ -4,6 +4,13 @@
     ViewData["Title"] = "Cadastro";
 }
 
+@if (TempData["MensagemErro"] != null)
+{
+                        <div class="alert alert-danger" role="alert">
+        @TempData["MensagemErro"]
+                        </div>  
+}
+
 <h1 class="display-4 text-center">Cadastro</h1>
 
 <form asp-controller="Cadastro" asp-action="Criar" method="post">
