--- a/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
@@ -2,15 +2,31 @@
 @{
     ViewData["Title"] = "Agendamento";
 }
+@if (TempData["MensagemErro"] != null)
+{
+                                    <div class="alert alert-danger" role="alert">
+        @TempData["MensagemErro"]
+                                    </div>  
+}
+
 <h1 class="text-center">Realizar Novo Atendimento</h1>
 <form asp-controller="Cliente" asp-action="Agendar" method="post">
     <div class="card">
-        <div class="card-body">
-            <h5 class="card-title">Selecione uma data</h5>
-            <input type="date" required asp-for="DataAgendamento" class="form-control mb-3">
+        <div class="card-body">            
             <div class="form-group">
-                <label for="horario" >Horário</label>
-                <input type="time" required asp-for="Horario"  class="form-control" name="Horario">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div id="calendario" class="d-flex flex-wrap"></div>
+                </div>
+                <input type="hidden" asp-for="DataAgendamento" id="DataAgendamento">
+            </div>  
+            <div class="form-group">
+                <label for="horario">Horário</label>
+                <select class="form-select" asp-for="HorarioId">
+                    @foreach (var horario in ViewBag.Horarios)
+                    {
+                        <option value="@horario.Id">@horario.Horario</option>
+                    }
+                </select>
             </div>
             <div class="mt-3">
                 <label for="barbeiro">Selecione um barbeiro</label>
@@ -31,7 +47,7 @@
                 </select>
             </div>
             <div class="text-center">
-                <button onclick="enviarData()" class="btn btn-primary mt-3 w-100">Enviar</button>
+                <button id="btnEnviar" class="btn btn-primary mt-3 w-100">Enviar</button>
                 <a class="btn btn-secondary btn-block w-100 my-1" role="button" asp-controller="Cliente" asp-action="Index">Voltar</a>
             </div>
         </div>
