Implementação da Avaliação do Serviço

--- a/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
+++ b/Aplicacao_Interativa/Views/Cliente/Agendar.cshtml
@@ -33,7 +33,7 @@
                 <select class="form-select" asp-for="Barbeiro">
                         @foreach (var item in ViewBag.Barbeiros)
                         {
-                            <option value="@item.Value">@item.Text</option>
+                            <option value="@item.Text">@item.Text</option>
                         }
                 </select>
             </div>          
