--- a/Aplicacao_Interativa/wwwroot/css/site.css
+++ b/Aplicacao_Interativa/wwwroot/css/site.css
@@ -67,3 +67,40 @@ body {
    color: #0d6efd;
 }
 
+/*Avaliar.cshtml*/
+.avaliacao{
+  display: flex;
+ }
+.star-icon{
+  list-style-type: none;
+  border: 1px solid #fff;
+  cursor: pointer;
+  color: #ffe500;
+  font-size: 40px;
+}
+.star-icon::before{
+  content: "\2605";
+}
+.star-icon.ativo ~ .star-icon::before{
+  content: "\2606";
+}
+.avaliacao:hover .star-icon::before{
+  content: "\2605";
+}
+.star-icon:hover ~ .star-icon::before{
+  content: "\2606";
+}
+
+/*Exibir estrela index.cshtml*/
+.star-fill {
+    list-style-type: none;
+    border: 1px solid #fff;
+    color: #ffe500;
+    font-size: 30px;
+}
+.star {
+    list-style-type: none;
+    border: 1px solid #fff;
+    color: #ffe500;
+    font-size: 30px;
+}
