--- a/Aplicacao_Interativa/Views/Shared/Components/Menu/Default.cshtml
+++ b/Aplicacao_Interativa/Views/Shared/Components/Menu/Default.cshtml
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Página Incial</a>
+          <a class="nav-link active" aria-current="page" asp-controller="Cliente" asp-action="Index">Página Incial</a>
         </li>
         @if (Model.Perfil == Aplicacao_Interativa.Enums.PerfilEnum.Barbeiro)
         {
